@startuml ClassDiagram

abstract class User {
    - Nom : String <<required>>
    - Email : String <<required>>
    - Telephone : String <<optional>>
    - MotDePasse : String <<required>>
    - Statut : Enum <<required>>
    - StatutVerificationEmail : Boolean <<optional>>
    - StatutVerificationTelephone : Boolean <<optional>>
    --
    + gererCompte()
    + gererPortefeuille()
    + gererTransactions()
    + acheterVendreCrypto()
    + gererIdentite()
    + consulterHistoriqueTransactions()
}

class Wallet {
    - balance : Double
    - currency : String
    --
    + addFunds(amount: Double)
    + withdrawFunds(amount: Double)
    + viewBalance() : Double
    + processTransaction(transaction: Transaction)
}

class Currency {
    - currencyId : String
    - name : String
    - symbol : String
    - type : Enum
    - exchangeRate : Double
    --
    + getCurrentRate()
    + updateExchangeRate()
    + getHistoricalRates()
}

class Transaction {
    - transactionId : String
    - amount : Double
    - date : Date
    - status : Enum
    --
    + initiateTransaction()
    + viewTransactionDetails()
}

class KYC {
    - userId : String
    - status : Enum
    - documents : List<String>
    --
    + submitDocuments()
    + verifyIdentity()
}

class Merchant {
    - merchantId : String
    - paymentSettings : String
    --
    + gererPaiements()
    + gererTransactionsMarchand()
    + gererParametresPaiement()
    + consulterRapports()
}

class Admin {
    + gererUtilisateurs()
    + superviserTransactions()
    + gererConformite()
    + gererCryptos()
    + consulterStatistiquesRapports()
}

class Staff {
    + gererSupport()
    + modererContenus()
    + assisterUtilisateursKYC()
}

User <|-- Merchant
Merchant <|-- Staff
Staff <|-- Admin

User "1" -- "1" Wallet
Wallet "1" -- "0..*" Transaction
User "1" -- "1" KYC
Wallet "1" -- "1..*" Currency

@enduml